--- a/web_lab3/web_lab3.csproj
+++ b/web_lab3/web_lab3.csproj
@@ -98,8 +98,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\Room.cs" />
-    <Compile Include="Models\Wall.cs" />
+    <Compile Include="Models\DatabaseModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
